Fix scrollbar

--- a/src/styles/core.less
+++ b/src/styles/core.less
@@ -2,8 +2,8 @@
 @import "./variables";
 @import "./mixin/retina-image";
 
-.crisp-client #crisp-chatbox {
-  z-index: 1000;
+.crisp-client {
+  --crisp-customization-container-index: 1000;
 }
 
 .theme-dark {
